@@ -1,2 +1,0 @@
-nose-exclude is a Nose plugin that allows you to easily specify
-directories to be excluded from testing.
