@@ -1,23 +1,0 @@
-# $NetBSD: Makefile,v 1.6 2024/04/30 14:31:11 wiz Exp $
-
-DISTNAME=	nose-exclude-0.5.0
-PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
-PKGREVISION=	2
-CATEGORIES=	devel python
-MASTER_SITES=	${MASTER_SITE_PYPI:=n/nose-exclude/}
-
-MAINTAINER=	pkgsrc-users@NetBSD.org
-HOMEPAGE=	https://pypi.python.org/pypi/nose-exclude
-COMMENT=	Exclude specific directories from nosetests runs
-LICENSE=	gnu-lgpl-v2.1
-
-TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools-[0-9]*:../../devel/py-setuptools
-TOOL_DEPENDS+=	${PYPKGPREFIX}-wheel-[0-9]*:../../devel/py-wheel
-DEPENDS+=	${PYPKGPREFIX}-nose-[0-9]*:../../devel/py-nose
-
-USE_LANGUAGES=	# none
-
-PYTHON_VERSIONS_INCOMPATIBLE=	27
-
-.include "../../lang/python/wheel.mk"
-.include "../../mk/bsd.pkg.mk"
