@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2024,v 1.6222 2024/10/14 07:30:54 adam Exp $
+$NetBSD: CHANGES-2024,v 1.6223 2024/10/14 07:34:33 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2024:
 
@@ -9424,3 +9424,4 @@ Changes to the packages collection and infrastructure in 2024:
 	Updated devel/py-scard to 2.1.1 [adam 2024-10-14]
 	Updated devel/py-treq to 24.9.1 [adam 2024-10-14]
 	Updated www/py-rjsmin to 1.2.3 [adam 2024-10-14]
+	Removed devel/py-nose-exclude [wiz 2024-10-14]
